# Omniforge

./: .gitignore  LICENSE  Makefile  README.md  README_remote_preview.txt  geezer_data.instructions.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: README.md  release.yml
artifacts/: README.md  manifest.json  settings.json
artifacts/assets/: README.md
artifacts/fonts/: README.md
docs/: CDI_Disclosure_Packet.md  DIAGRAMS.md  README.md  SANITIZATION_REPORT.md  USAGE.md  zshrc.portable
docs/Inventory/: Omniforge-Inventory.md
docs/disclosure/: Architecture-Overview.md  COI-Disclosure.md  Diagrams.md  Prior-Inventions.md  Submission-Checklist.md
scripts/: README.md  apply_local.sh  install_prereqs.ps1  install_wsl.sh
tests/: README.md  test_messaging.py  test_sanitizer.py
tmp/: README.md
tmp/pytest/: README.md
tmp/pytest/test_strip_denylisted_aliases0/: .zshrc  README.md
tool/: README.md  __init__.py  applier.py  cli.py  exporter.py  github_publisher.py  installer.py  messaging.py  sanitizer.py  validators.py
tool/tmp/InventoryPacket/Omniforge-Repository-Inventory-Packet-20260303/: README.txt
tool/tmp/InventoryPacket/Omniforge-Repository-Inventory-Packet-20260303/evidence/: inventory_phase2.tsv
tool/tmp/InventoryPacket/Omniforge-Repository-Inventory-Packet-20260303/manifests/: checksums_sha256.txt
tool/tmp/pytest/test_strip_denylisted_aliases0/: manifest.json  report.md
windows_terminal_portable_profile.egg-info/: PKG-INFO  README.md  SOURCES.txt  entry_points.txt  requires.txt
(+1 files in other folders)
